add add GET AND GET/id projectController and router

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 BASE_URI=/api/projects
 DB_HOST=localhost
-DB_NAME=kda_apprennant
+DB_NAME=portefolio
 DB_USER=rkota_kda
 DB_PASSWORD=1234
+PORT=3700
