refactor:add remote database

--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 BASE_URI=/api/projects
-DB_HOST=localhost
-DB_NAME=portefolio
-DB_USER=rkota_kda
-DB_PASSWORD=1234
-PORT=3700
+DB_HOST=b2jmllrpsninoi3cdodt-mysql.services.clever-cloud.com
+DB_NAME=b2jmllrpsninoi3cdodt
+DB_USER=uisafgk0fzbgeyhu
+DB_PASSWORD=iMyug0IoFZzKVmLEQgdq
+PORT=3306
