--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
+
 BASE_URI=/api/projects
-DB_HOST=b2jmllrpsninoi3cdodt-mysql.services.clever-cloud.com
-DB_NAME=b2jmllrpsninoi3cdodt
-DB_USER=uisafgk0fzbgeyhu
-DB_PASSWORD=iMyug0IoFZzKVmLEQgdq
-PORT=3306
+MYSQL_ADDON_HOST=b2jmllrpsninoi3cdodt-mysql.services.clever-cloud.com
+MYSQL_ADDON_DB=b2jmllrpsninoi3cdodt
+MYSQL_ADDON_USER=uisafgk0fzbgeyhu
+MYSQL_ADDON_PASSWORD=iMyug0IoFZzKVmLEQgdq 
+MYSQL_ADDON_URI=mysql://uisafgk0fzbgeyhu:iMyug0IoFZzKVmLEQgdq@b2jmllrpsninoi3cdodt-mysql.services.clever-cloud.com:3306/b2jmllrpsninoi3cdodt
